--- a/pkg/commands/import/testdata/v1-deps.yaml
+++ b/pkg/commands/import/testdata/v1-deps.yaml
@@ -1,21 +1,21 @@
 apiVersion: kp.kpack.io/v1alpha1
 kind: DependencyDescriptor
-defaultClusterBuilder: some-cb
-defaultStack: some-stack
+defaultClusterBuilder: clusterbuilder-name
+defaultStack: stack-name
 stores:
-- name: some-store
+- name: store-name
   sources:
-  - image: some-registry.io/some-project/store-image
+  - image: some-registry.io/repo/buildpack-image
 stacks:
-- name: some-stack
+- name: stack-name
   buildImage:
-    image: some-registry.io/some-project/build-image
+    image: some-registry.io/repo/build-image
   runImage:
-    image: some-registry.io/some-project/run-image
+    image: some-registry.io/repo/run-image
 clusterBuilders:
-- name: some-cb
-  stack: some-stack
-  store: some-store
+- name: clusterbuilder-name
+  stack: stack-name
+  store: store-name
   order:
   - group:
-    - id: buildpack-1
+    - id: buildpack-id
