--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,15 @@ jobs:
       with:
         go-version-file: 'go.mod'
 
+    - name: Check docs up to date
+      run: |
+        set -euo pipefail
+        go run cmd/docs/main.go
+        if [[ `git status --porcelain` ]]; then
+          echo "Docs are not up-to-date"
+          exit 1
+        fi
+
     - name: Run tests
       run: go test -v ./pkg/...
 
