--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -16,5 +16,14 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
 
+      - name: Check docs up to date
+        run: |
+          set -euo pipefail
+          go run cmd/docs/main.go
+          if [[ `git status --porcelain` ]]; then
+            echo "Docs are not up-to-date"
+            exit 1
+          fi
+
       - name: Test
         run: go test -v ./pkg/...
