--- a/pkg/commands/image/testdata/test-image.yaml
+++ b/pkg/commands/image/testdata/test-image.yaml
@@ -2,7 +2,7 @@ apiVersion: kpack.io/v1alpha2
 kind: Image
 metadata:
   annotations:
-    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Image","apiVersion":"kpack.io/v1alpha2","metadata":{"name":"some-image","namespace":"some-default-namespace","creationTimestamp":null},"spec":{"tag":"some-registry.io/some-repo","builder":{"kind":"ClusterBuilder","name":"default"},"serviceAccountName":"default","source":{"git":{"url":"some-git-url","revision":"some-git-rev"},"subPath":"some-sub-path"},"build":{"services":[{"kind":"SomeResource","name":"some-binding","apiVersion":"v1"}],"env":[{"name":"some-key","value":"some-val"}],"resources":{}}},"status":{}}'
+    kubectl.kubernetes.io/last-applied-configuration: '{"kind":"Image","apiVersion":"kpack.io/v1alpha2","metadata":{"name":"some-image","namespace":"some-default-namespace","creationTimestamp":null},"spec":{"tag":"some-registry.io/some-repo","builder":{"kind":"ClusterBuilder","name":"default"},"serviceAccountName":"default","source":{"git":{"url":"some-git-url","revision":"some-git-rev"},"subPath":"some-sub-path"},"failedBuildHistoryLimit":10,"successBuildHistoryLimit":10,"build":{"services":[{"kind":"SomeResource","name":"some-binding","apiVersion":"v1"}],"env":[{"name":"some-key","value":"some-val"}],"resources":{}}},"status":{}}'
   creationTimestamp: null
   name: some-image
   namespace: some-default-namespace
@@ -19,11 +19,13 @@ spec:
   builder:
     kind: ClusterBuilder
     name: default
+  failedBuildHistoryLimit: 10
   serviceAccountName: default
   source:
     git:
       revision: some-git-rev
       url: some-git-url
     subPath: some-sub-path
+  successBuildHistoryLimit: 10
   tag: some-registry.io/some-repo
 status: {}
