--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,14 +1,13 @@
 name: unit test
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches:
+    - main
+    - release/**
 
 jobs:
-
-  test:
+  unit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,3 +26,6 @@ jobs:
 
       - name: Test
         run: go test -v ./pkg/...
+
+      - name: Report coverage
+        uses: codecov/codecov-action@v3.1.4
