feat: Migrate kp import to v1 API with ClusterLifecycle and ClusterBuildpack support
This PR migrates the kp import command to use the new v1 API (kp.kpack.io/v1)
with support for ClusterLifecycle and ClusterBuildpack CRDs.

API Version Migration:
- Update dependency descriptor to support kp.kpack.io/v1 API version
- Add automatic conversion from v1alpha1 and v1alpha3 descriptors to v1
- Replace ConfigMap-based lifecycle management with ClusterLifecycle CRDs

ClusterLifecycle Support:
- Import creates ClusterLifecycle resources instead of updating the lifecycle ConfigMap
- Support for multiple named lifecycles in a single descriptor
- Add defaultClusterLifecycle field for aliasing (creates a 'default-lifecycle' alias)
- Lifecycle images are pre-loaded (relocated) to the default repository

ClusterBuildpack Support:
- Add new clusterBuildpacks section to dependency descriptor
- Support for standalone buildpack images (not part of a store)
- Add defaultClusterBuildpack field for aliasing (creates a 'default' alias)
- Buildpack images are pre-loaded (relocated) to the default repository
- Buildpack image validation (checks for io.buildpacks.buildpackage.metadata label)

ClusterBuilder Improvements:
- Skip store reference in ClusterBuilder when clusterStore field is empty
- Allows builders that only use ClusterBuildpacks without a ClusterStore

Code Organization:
- Move descriptor types and conversion logic to pkg/import/descriptor/
- Separate files for each API version (v1alpha1.go, v1alpha3.go, v1.go)
- Add LastAppliedConfiguration annotation to ClusterLifecycle and ClusterBuildpack

Backward Compatibility:
- v1alpha1 and v1alpha3 descriptors are automatically converted to v1 format
- Existing descriptors continue to work without modification
- The lifecycle field in v1alpha3 is converted to a ClusterLifecycle named 'default-lifecycle'

--- a/pkg/commands/import/testdata/deps.yaml
+++ b/pkg/commands/import/testdata/deps.yaml
@@ -1,9 +1,13 @@
-apiVersion: kp.kpack.io/v1alpha3
+apiVersion: kp.kpack.io/v1
 kind: DependencyDescriptor
 defaultClusterBuilder: clusterbuilder-name
 defaultClusterStack: stack-name
-lifecycle:
-  image: some-registry.io/repo/lifecycle-image
+clusterLifecycles:
+  - name: default
+    image: some-registry.io/repo/lifecycle-image
+clusterBuildpacks:
+  - name: my-buildpack
+    image: some-registry.io/repo/standalone-buildpack
 clusterStores:
 - name: store-name
   sources:
