--- a/pkg/commands/import/testdata/updated-deps.yaml
+++ b/pkg/commands/import/testdata/updated-deps.yaml
@@ -1,9 +1,10 @@
-apiVersion: kp.kpack.io/v1alpha3
+apiVersion: kp.kpack.io/v1
 kind: DependencyDescriptor
 defaultClusterBuilder: clusterbuilder-name
 defaultClusterStack: stack-name
-lifecycle:
-  image: some-registry.io/repo/another-lifecycle-image
+clusterLifecycles:
+  - name: default
+    image: some-registry.io/repo/another-lifecycle-image
 clusterStores:
 - name: store-name
   sources:
